--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@lomray/microservice-nodejs-lib": "^2.8.1",
     "@lomray/microservice-remote-middleware": "^1.6.1",
-    "@lomray/typeorm-json-query": "^1.0.2",
+    "@lomray/typeorm-json-query": "^1.1.1",
     "class-transformer": "0.4.1",
     "class-validator": "^0.13.2",
     "class-validator-jsonschema": "^3.1.0",
@@ -50,43 +50,43 @@
     "winston-loki": "^6.0.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@lomray/eslint-config": "^1.1.2",
+    "@lomray/eslint-config": "^1.2.1",
     "@lomray/prettier-config": "^1.1.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@types/chai": "^4.3.0",
-    "@types/lodash": "^4.14.176",
-    "@types/mocha": "^9.0.0",
+    "@types/chai": "^4.3.1",
+    "@types/lodash": "^4.14.182",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^16.9.6",
-    "@types/sinon": "^10.0.6",
+    "@types/sinon": "^10.0.11",
     "@types/sinon-chai": "^3.2.8",
     "@types/traverse": "^0.6.32",
     "@zerollup/ts-transform-paths": "^1.7.18",
-    "chai": "^4.3.4",
+    "chai": "^4.3.6",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
-    "mocha": "^9.1.3",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.2",
+    "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "prettier": "^2.5.1",
     "rewiremock": "^3.14.3",
-    "rollup": "^2.63.0",
+    "rollup": "^2.75.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-ts": "^2.0.5",
-    "semantic-release": "^19.0.2",
-    "sinon": "^11.1.2",
+    "rollup-plugin-ts": "^3.0.2",
+    "semantic-release": "^19.0.3",
+    "sinon": "^14.0.0",
     "sinon-chai": "^3.7.0",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.12.0",
+    "ts-node": "^10.8.1",
+    "tsconfig-paths": "^4.0.0",
     "ttypescript": "^1.5.13",
-    "typescript": "4.4.4"
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "firebase-admin": "^10.0.2",
+    "firebase-admin": "^11.0.0",
     "lodash": "^4.17.21"
   },
   "bundledDependencies": [
